[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Samuel Laroche <slplaroche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
natsort = "^8.2.0"
click = "^8.1.7"
mypy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[tool.poetry.scripts]
day = "aoc2023.day:main"

[tool.black]
line-length = 90
target_version = ["py311"]

[tool.isort]
profile = "black"
force_single_line = true
known_typing_library = '''
    typing,
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

