[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Samuel Laroche <slplaroche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.scripts]
day = "aoc2023.day:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"
isort = "^5.13.0"
autoflake = "^2.2.1"

[tool.black]
line-length = 90
target_version = ["py311"]

[tool.isort]
profile = "black"
force_single_line = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
remove-all-unused-imports = true
in-place = true
recursive = true
